--- a/Jupyter/notebook03.ipynb
+++ b/Jupyter/notebook03.ipynb
@@ -4,72 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Python Syntax <hr style=\"border:2px solid #108999\"> </hr>"
+    "# Operators <hr style=\"border:2px solid #108999\"> </hr>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Arthimetic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(3,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 5, 6.9, 7.0, 'car')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3,5,6.9,7.0,'car'   #by-default tuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a= 3,5,6.9,7.0,'car'\n",
-    "type(a)"
+    "### Comparison Operators"
    ]
   },
   {
@@ -80,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "True"
       ]
      },
      "execution_count": 1,
@@ -89,7 +31,7 @@
     }
    ],
    "source": [
-    "1+3"
+    "10 == 20/2"
    ]
   },
   {
@@ -100,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "-2"
+       "False"
       ]
      },
      "execution_count": 2,
@@ -109,7 +51,7 @@
     }
    ],
    "source": [
-    "3-5"
+    "10 != 10"
    ]
   },
   {
@@ -120,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "True"
       ]
      },
      "execution_count": 3,
@@ -129,7 +71,7 @@
     }
    ],
    "source": [
-    "15/3"
+    "10 != 15"
    ]
   },
   {
@@ -140,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "5.333333333333333"
+       "True"
       ]
      },
      "execution_count": 4,
@@ -149,7 +91,7 @@
     }
    ],
    "source": [
-    "16/3"
+    "100>50"
    ]
   },
   {
@@ -160,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "5.333333333333333"
+       "False"
       ]
      },
      "execution_count": 5,
@@ -169,7 +111,7 @@
     }
    ],
    "source": [
-    "float(16)/3"
+    "100<50"
    ]
   },
   {
@@ -180,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "5.333333333333333"
+       "False"
       ]
      },
      "execution_count": 6,
@@ -189,7 +131,7 @@
     }
    ],
    "source": [
-    "16.0/3"
+    "15 >= 10+10"
    ]
   },
   {
@@ -200,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "True"
       ]
      },
      "execution_count": 7,
@@ -209,7 +151,21 @@
     }
    ],
    "source": [
-    "16%3"
+    "15 <= 10+5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logical and Identity Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Logical Operators:**"
    ]
   },
   {
@@ -220,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "True"
       ]
      },
      "execution_count": 8,
@@ -229,7 +185,7 @@
     }
    ],
    "source": [
-    "5*3"
+    "True and True"
    ]
   },
   {
@@ -240,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "False"
       ]
      },
      "execution_count": 9,
@@ -249,15 +205,7 @@
     }
    ],
    "source": [
-    "x=5*3\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Double Equality Sign"
+    "True and False"
    ]
   },
   {
@@ -268,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "125"
+       "False"
       ]
      },
      "execution_count": 10,
@@ -277,36 +225,154 @@
     }
    ],
    "source": [
-    "5**3"
+    "False and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "y=5**3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "125"
+       "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3>5 and 10<=20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Not -> And -> Or**"
    ]
   },
   {
@@ -317,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 18,
@@ -326,7 +392,7 @@
     }
    ],
    "source": [
-    "y==125"
+    "True and not True"
    ]
   },
   {
@@ -346,14 +412,7 @@
     }
    ],
    "source": [
-    "y==126"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reassign Values"
+    "False or not True and True"
    ]
   },
   {
@@ -364,7 +423,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "True"
       ]
      },
      "execution_count": 20,
@@ -373,29 +432,14 @@
     }
    ],
    "source": [
-    "z=1\n",
-    "z"
+    "True and not True or True"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "z=3\n",
-    "z"
+    "**Identity Operators:**"
    ]
   },
   {
@@ -404,9 +448,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
+      "<>:1: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
+      "C:\\Users\\ankit\\AppData\\Local\\Temp\\ipykernel_12476\\2929037671.py:1: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
+      "  5 is 6\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "8"
+       "False"
       ]
      },
      "execution_count": 22,
@@ -415,7 +469,27 @@
     }
    ],
    "source": [
-    "z+5"
+    "5 is 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 == 6"
    ]
   },
   {
@@ -424,9 +498,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: \"is not\" with 'int' literal. Did you mean \"!=\"?\n",
+      "<>:1: SyntaxWarning: \"is not\" with 'int' literal. Did you mean \"!=\"?\n",
+      "C:\\Users\\ankit\\AppData\\Local\\Temp\\ipykernel_12476\\2227521640.py:1: SyntaxWarning: \"is not\" with 'int' literal. Did you mean \"!=\"?\n",
+      "  5 is not 6\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "7"
+       "True"
       ]
      },
      "execution_count": 24,
@@ -435,8 +519,7 @@
     }
    ],
    "source": [
-    "z=7\n",
-    "z"
+    "5 is not 6"
    ]
   },
   {
@@ -447,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "True"
       ]
      },
      "execution_count": 25,
@@ -456,226 +539,7 @@
     }
    ],
    "source": [
-    "3+5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;241;43m3\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m5\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "3+'5'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.0"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3+5.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Comments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "#This is just a comment and not code!\n",
-    "print(7,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Comment 1\n",
-    "#Comment 2\n",
-    "print(300)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Line Continuation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2.0*1.5+\\\n",
-    "5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Indexing Elements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Friday'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Friday\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Friday\"[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"Friday\"[4]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Structure your code with Indentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def five(x):\n",
-    "    x=5\n",
-    "    return x\n",
-    "    print(five(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "def five(x):\n",
-    "    x=5\n",
-    "    return x\n",
-    "print(five(3))"
+    "5 != 6"
    ]
   }
  ],
