--- a/Exercise/codebasics.ipynb
+++ b/Exercise/codebasics.ipynb
@@ -2556,6 +2556,437 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  print(1)\n",
+    "  print(20 / 0)\n",
+    "  print(2)\n",
+    "except ZeroDivisionError:\n",
+    "  print(3)\n",
+    "finally:\n",
+    "  print(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Class & Object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Avenger object at 0x000001FFEA902A50>\n",
+      "\n",
+      "    Avenger Profile:\n",
+      "\n",
+      "    Name: Black Widow\n",
+      "    Age: 35\n",
+      "    Gender: F\n",
+      "\n",
+      "    has Batons weapon & superhuman super power.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Avenger:\n",
+    "\n",
+    "  def __init__(self, name, age, gender, superpower, weapon):\n",
+    "    self.name = name\n",
+    "    self.age = age\n",
+    "    self.gender = gender\n",
+    "    self.superpower = superpower\n",
+    "    self.weapon = weapon\n",
+    "\n",
+    "  def get_name(self):\n",
+    "    return self.name\n",
+    "\n",
+    "  def get_age(self):\n",
+    "    return self.age\n",
+    "\n",
+    "  def get_superpower(self):\n",
+    "    return self.superpower\n",
+    "\n",
+    "  def get_info(self):\n",
+    "    return f\"\"\"\n",
+    "    Avenger Profile:\n",
+    "\n",
+    "    Name: {self.name}\n",
+    "    Age: {self.age}\n",
+    "    Gender: {self.gender}\n",
+    "\n",
+    "    has {self.weapon} weapon & {self.superpower} super power.\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "Super_heroes = ['Captain America', 'Iron Man', 'Black Widow', 'Hulk', 'Thor', 'Hawkeye']\n",
+    "super_powers = ['Super strength', 'Technology', 'superhuman', 'Unlimited Strength', 'super Energy', 'fighting skills']\n",
+    "weapons = [\"Shield\", \"Armor\", \"Batons\", \"No Weapon\", \"Mjölnir\", \"Bow and Arrows\"]\n",
+    "\n",
+    "ages = [110, 40, 35, 34, 10000, 30]\n",
+    "genders = ['M', 'M', 'F', 'M', 'M', 'M']\n",
+    "\n",
+    "avengers = []\n",
+    "for name, age, gender, power, weapon in zip(Super_heroes, ages, genders, super_powers, weapons):\n",
+    "    avengers.append(\n",
+    "        Avenger(name, age, gender, power, weapon)\n",
+    "    )\n",
+    "\n",
+    "print(avengers[0])\n",
+    "print(avengers[2].get_info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the base class\n",
+    "\n",
+    "class MobilePhone:\n",
+    "\n",
+    "    def __init__(self, screenType, networkType, dualSim, frontCamera, camera, RAM, storage):\n",
+    "        self.screenType = screenType\n",
+    "        self.networkType = networkType\n",
+    "        self.dualSim = dualSim\n",
+    "        self.frontCamera = frontCamera\n",
+    "        self.camera = camera\n",
+    "        self.RAM = RAM\n",
+    "        self.storage = storage\n",
+    "\n",
+    "    def make_call(self):\n",
+    "        pass\n",
+    "\n",
+    "    def recieve_call(self):\n",
+    "        pass\n",
+    "\n",
+    "    def take_a_picture(self):\n",
+    "        pass\n",
+    "\n",
+    "     \n",
+    "# Let's create Apple Class\n",
+    "class Apple(MobilePhone):\n",
+    "\n",
+    "    def __init__(self, productName, networkType, RAM, storage):\n",
+    "        self.productName = productName\n",
+    "        super().__init__(screenType='Touch Screen',\n",
+    "                         camera=\"12MP\",\n",
+    "                         frontCamera=\"8MP\",\n",
+    "                         dualSim=False,\n",
+    "                         networkType=networkType,\n",
+    "                         RAM=RAM,\n",
+    "                         storage=storage)\n",
+    "        \n",
+    "    def make_call(self):\n",
+    "        print(f\"Making a call from {self.productName} Apple mobile phone.\")\n",
+    "\n",
+    "    def recieve_call(self):\n",
+    "        print(f\"Recieving a call on {self.productName} Apple mobile phone.\")\n",
+    "\n",
+    "    def take_a_picture(self):\n",
+    "        return f\"Taking Picture on {self.productName} with {self.camera} camera\"\n",
+    "\n",
+    "    def get_info(self):\n",
+    "        return f\"\"\"Product Name: {self.productName}\n",
+    "        Camera: {self.camera}\n",
+    "        Network Type: {self.networkType}\n",
+    "        ...\n",
+    "        \"\"\"\n",
+    "        # etc\n",
+    "\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Apple({self.productName}, {self.storage}, ...)\"\n",
+    "    \n",
+    "\n",
+    "# creating samsung Class\n",
+    "class Samsung(MobilePhone):\n",
+    "\n",
+    "    def __init__(self, productName, networkType, dualSim, frontCamera, camera, RAM, storage):\n",
+    "        self.productName = productName\n",
+    "        super().__init__(screenType='Touch Screen',\n",
+    "                         camera=camera,\n",
+    "                         frontCamera=frontCamera,\n",
+    "                         dualSim=dualSim,\n",
+    "                         networkType=networkType,\n",
+    "                         RAM=RAM,\n",
+    "                         storage=storage)\n",
+    "        \n",
+    "    def make_call(self):\n",
+    "        print(f\"Making a call from {self.productName} Samsung mobile phone.\")\n",
+    "\n",
+    "    def recieve_call(self):\n",
+    "        print(f\"Recieving a call on {self.productName} Samsung mobile phone.\")\n",
+    "\n",
+    "    def take_a_picture(self):\n",
+    "        return f\"Taking Picture on {self.productName} with {self.camera} camera\"\n",
+    "\n",
+    "    def get_info(self):\n",
+    "        return f\"\"\"Product Name: {self.productName}\n",
+    "        Camera: {self.camera}\n",
+    "        Network Type: {self.networkType}\n",
+    "        ...\n",
+    "        \"\"\"\n",
+    "        # etc\n",
+    "\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Samsung({self.productName}, {self.storage}, ...)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apple phones\n",
+    "\n",
+    "apple1 = Apple(\"Iphone6\", \"4G\", \"4GB\", \"64GB\")\n",
+    "apple2 = Apple(\"Iphone8\", \"5G\", \"6GB\", \"128GB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Samsung Phones\n",
+    "\n",
+    "samsung1 = Samsung(\"Samsung1\", \"4G\", True, \"16MP\", \"32MP\", \"4GB\", \"64GB\")\n",
+    "samsung2 = Samsung(\"Samsung2\", \"3G\", True, \"8MP\", \"16MP\", \"3GB\", \"16GB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple(Iphone6, 64GB, ...)\n",
+      "Making a call from Iphone8 Apple mobile phone.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(apple1)\n",
+    "apple2.make_call()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recieving a call on Samsung1 Samsung mobile phone.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Taking Picture on Iphone6 with 12MP camera'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samsung1.recieve_call()\n",
+    "apple1.take_a_picture()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product Name: Samsung2\n",
+      "        Camera: 16MP\n",
+      "        Network Type: 3G\n",
+      "        ...\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(samsung2.get_info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Exception Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. You have the following python code.\n",
+    "\n",
+    "```py\n",
+    "\tlst = [int(x) for x in input().split()]\n",
+    "\ti = int(input(“Enter Index: “)\n",
+    "    print(lst[i])\n",
+    "```\n",
+    "Use Exception Handling to handle the exception which will occur in this program.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m lst \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mint\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28minput\u001b[39m()\u001b[38;5;241m.\u001b[39msplit()]\n\u001b[0;32m      2\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter Index: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlst\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [int(x) for x in input().split()]\n",
+    "i = int(input(\"Enter Index: \"))\n",
+    "print(lst[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. You have certain employee records as a list of dictionaries. The dictionary contains the following information.\n",
+    "`Employee = {“id”: id, “first_name”: fname, “middle_name”: mname, “last_name”: lname}`\n",
+    "\n",
+    "You are using this code to print the full name of each employee:\n",
+    "\n",
+    "    for employee in employees:\n",
+    "        full_name  = employee[‘first_name’] + employee[‘middle_name’] + employee[‘last_name’]\n",
+    "\t    print(full_name)\n",
+    "\n",
+    "But some employees don’t have a middle_name, so the `middle_name` key will not be present in the dictionary. Use Exception handling to correctly print the full names of your employees.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employees = [\n",
+    "    {\"id\": 1, \"first_name\": \"Karan \", \"middle_name\": \"Rama \", \"last_name\": \"Reddy\"},\n",
+    "    {\"id\": 2, \"first_name\": \"Alex \", \"last_name\": \"Gorge\"},\n",
+    "    {\"id\": 3, \"first_name\": \"Alice \", \"middle_name\": \"M \", \"last_name\": \"Warner\"},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Karan Rama Reddy\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'middle_name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m employee \u001b[38;5;129;01min\u001b[39;00m employees:\n\u001b[1;32m----> 2\u001b[0m     full_name \u001b[38;5;241m=\u001b[39m employee[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfirst_name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[43memployee\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmiddle_name\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m employee[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlast_name\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(full_name)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'middle_name'"
+     ]
+    }
+   ],
+   "source": [
+    "for employee in employees:\n",
+    "    full_name = employee['first_name'] + employee['middle_name'] + employee['last_name']\n",
+    "    print(full_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Karan Rama Reddy\n",
+      "Alex Gorge\n",
+      "Alice M Warner\n"
+     ]
+    }
+   ],
+   "source": [
+    "for employee in employees:\n",
+    "    try:\n",
+    "        full_name = employee['first_name'] + employee['middle_name'] + employee['last_name']\n",
+    "    except KeyError:\n",
+    "        full_name = employee['first_name'] + employee['last_name']\n",
+    "    finally:\n",
+    "        print(full_name)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
